Adding additional styling and a button for note component. Now we can begin hooking up the flux flow and saving to postgresql.

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'components/_login';
 @import 'components/_logout';
 @import 'components/_dashboard';
+@import 'components/_note';
 
 /*
 Style Guide Lines. Remove if you prefer your own library
