Added a progress bar(modified for redux-axios-middleware)

--- a/app/css/components/about.css
+++ b/app/css/components/about.css
@@ -1,3 +1,7 @@
+.about {
+  composes: box from '../common/layout.css';
+}
+
 .header {
   composes: heading from '../common/typography';
   text-align: center;
