--- a/app/css/components/chatwindow.css
+++ b/app/css/components/chatwindow.css
@@ -5,6 +5,8 @@
   overflow: scroll;
   margin-bottom: 10px;
   padding:0 8px;
+  float:left;
+  margin-right:30px;
 
 }
 
@@ -16,7 +18,7 @@
   }
 }
 .userMessage {
-  border: 1px solid grey;
+  /*border: 1px solid grey;*/
 }
 .messageWindow {
   list-style-type: none;
