--- a/app/css/components/userlist.css
+++ b/app/css/components/userlist.css
@@ -1,18 +1,20 @@
 
 .userlist {
   width: 300px;
-  float: left;
+  float: right;
 }
 
 .listwrap{
   height:471px;
   overflow:scroll;
   border: solid 1px grey;
+
   ul {
     list-style-type: none;
     padding:0;
     padding-left: 4px;
   }
+  
 }
 
 h2 {
