move helmet link and remove redundant font include

--- a/app/css/settings.css
+++ b/app/css/settings.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@value montserrat from './common/typography.css';
+
 @value font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 
 @value font-small: 12px;
