Substituted color symbols for codes

--- a/app/css/components/main-section.css
+++ b/app/css/components/main-section.css
@@ -11,8 +11,8 @@
 .header {
   @apply --title;
   @apply --subHeading;
-  background: #ed193a;
-  color: #fff;
+  background: --colorCrimson;
+  color: --colorWhite;
 }
 
 .list {
